--- a/HW-01/index.html
+++ b/HW-01/index.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-    <!-- <script src="task-1.js" type="module"></script> -->
-    <!-- <script src="task-2.js" type="module"></script> -->
-    <!-- <script src="task-3.js" type="module"></script> -->
-    <!-- <script src="task-4.js" type="module"></script> -->
-    <!-- <script src="task-5.js" type="module"></script> -->
-    <!-- <script src="task-6.js" type="module"></script> -->
-    <script src="practica.js"></script>
+    <script src="./js/task-1.js" type="module"></script>
+    <script src="./js/task-2.js" type="module"></script>
+    <script src="./js/task-3.js" type="module"></script>
+    <script src="./js/task-4.js" type="module"></script>
+    <script src="./js/task-5.js" type="module"></script>
+    <script src="./js/task-6.js" type="module"></script>
+    
 
 </body>
 
